Se crea el directorio roles para crear los roles en la paguina, cambios en el footer_admin y en el header_admin

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,3 +3,18 @@
     background: gray;
     padding: 6px;
 }
+
+.app-sidebar__toggle{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15pt;
+}
+
+.app-sidebar__toggle::before{
+    display: none;
+}
