--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,31 +1,29 @@
-.app-sidebar__user-avatar{
+.app-sidebar__user-avatar {
     width: 48px;
     background: gray;
     padding: 6px;
 }
-
 .app-sidebar__toggle{
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15pt;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 15pt;
 }
-
 .app-sidebar__toggle::before{
-    display: none;
+	display: none;
 }
-
-.app-nav__item{
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15pt;
+.headerRegister{
+	background: #009688;
+	color: #FFF;
+}
+.headerUpdate{
+	background: #007bff;
+	color: #FFF;
+}
+.notBlock{
+	display: none;
 }
